--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,9 @@
     "@tanstack/react-router": "^1.120.15",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "chart.js": "^4.4.9",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.1",
